# ZJU-CS

./: README.md
BS体系软件设计/: 课程说明.md
Group 10/: Readme.md
Java应用技术/: 课程说明.md
linux短学期/: 课程说明.md
人工智能/: 课程说明.md
人工智能/hw/: zebra.py
人工智能/理论复习/: 课程导图.xmind
人工智能安全/: 课程笔记.md  课程说明.md
人工智能安全/作业/: AI公平.md  人工智能隐私性.md  后门攻击.md  对抗样本攻击与防御.md  数据投毒攻击.md
人工智能安全/大报告/: 安全实验报告.md
人工智能安全/实验代码/: 00_LGB.ipynb  0_victim_model.ipynb  1_attack.ipynb  2_data_defense.ipynb  3_model_defense.ipynb  client.py  datasets.py  main.py  mnist.ipynb  models.py  server.py
军事理论/: 课程说明.md
力学导论/: 课程说明.md
大数据存储与计算/: 大数据存储与计算.pptx  大数据存储与计算技术.md  课程说明.md
学长组整理/: 文件说明.md
学长组整理/入学小测必备/: 学生手册题库(1).doc  新生mooc答案Word版.docx
学长组整理/学习可取/: 有爱的各类通识课介绍.xlsx  线上线下补选流程.docx  论文模板(仅供参考).docx
托福写作/: 2017-2021托福写作独立题目.doc  英语小词块整理.docx  课程说明.md
操作系统/: 课程说明.md
支教备课文件/: 感想.md
政治经济学/: 课程说明.md
数字逻辑设计/: ~$第二个实验.doc  课程说明.md
数据库系统/: 课程说明.md
数据结构基础/: ~$题库.docx  课程说明.md
普物实验2-LabView/: Labview虚拟实验测电机转速.docx  课程说明.md
机器学习/: 课程说明.md
杂论杂言/: Commit.md  杂想.md
材料科学与人类文明/: 课程说明.md
研究生课/: 人工智能安全.md  人工智能算法与系统.md  人机交互与虚拟人.md  知识图谱.md  网络安全.md  计算机科学与技术研究方法.md  计算机视觉.md
社交网络安全隐私/: 课程笔记.md  课程说明.md
离散数学/: 课程说明.md
绿色建筑/: 课程说明.md
编译原理/: 课程说明.md
职业生涯规划A/: 职业生涯规划书.docx
视觉奥秘及应用/: 课程说明.md
计算机体系结构/: 课程说明.md
计算机科学思想史/: 课程说明.md
计算机组成/: 课程说明.md
计算机网络/: 课程说明.md
计算机网络/课程实验/lab2/demo/: CMakeLists.txt  client.c  client2.c  demo.cpp  server_v1.c  server_v2.c  server_v3.c
计算理论/: 课程说明.md
计组/: 课程说明.md
软件工程/: readme.md
面向对象程序设计/: 课程说明.md
马克思原理H/: 课程说明.md
高级数据结构/: 课程说明.md
(+168 files in other folders)
